cabal-version: 2.2

name:           repro
version:        1.3.0
category:       Language
build-type:     Simple

library
  exposed-modules:
      Src
  other-modules:
      Paths_repro
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , singletons == 2.6
    , vinyl == 0.12.2
  default-language: Haskell2010

test-suite repro-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
      test
  build-depends:
      base >=4.7 && <5
    , repro
  default-language: Haskell2010
